; ModuleID = '/home/carl/AnghaBench/git/extr_refs.c_refs_head_ref.c'
source_filename = "/home/carl/AnghaBench/git/extr_refs.c_refs_head_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref_store = type { i32 }
%struct.object_id = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"HEAD\00", align 1
@RESOLVE_REF_READING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @refs_head_ref(%struct.ref_store* %0, i32 (i8*, %struct.object_id*, i32, i8*)* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.ref_store*, align 8
  %6 = alloca i32 (i8*, %struct.object_id*, i32, i8*)*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.object_id, align 4
  %9 = alloca i32, align 4
  store %struct.ref_store* %0, %struct.ref_store** %5, align 8
  store i32 (i8*, %struct.object_id*, i32, i8*)* %1, i32 (i8*, %struct.object_id*, i32, i8*)** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load %struct.ref_store*, %struct.ref_store** %5, align 8
  %11 = load i32, i32* @RESOLVE_REF_READING, align 4
  %12 = call i32 @refs_read_ref_full(%struct.ref_store* %10, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %11, %struct.object_id* %8, i32* %9)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %19, label %14

14:                                               ; preds = %3
  %15 = load i32 (i8*, %struct.object_id*, i32, i8*)*, i32 (i8*, %struct.object_id*, i32, i8*)** %6, align 8
  %16 = load i32, i32* %9, align 4
  %17 = load i8*, i8** %7, align 8
  %18 = call i32 %15(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), %struct.object_id* %8, i32 %16, i8* %17)
  store i32 %18, i32* %4, align 4
  br label %20

19:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %20

20:                                               ; preds = %19, %14
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i32 @refs_read_ref_full(%struct.ref_store*, i8*, i32, %struct.object_id*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
